# rpmreq

./: .gitreview  .zuul.yaml  HACKING  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
playbooks/: README.md  codestyle.yaml  unit.yaml
rpmreq/: __init__.py  actions.py  cli.py  exception.py  graph.py  helpers.py  query.py  shell.py  spec.py
tests/: test_common.py
tests/assets/spec/foo/: foo.spec
tests/assets/spec/macros-basic/: macros-basic.spec
tests/unit/: test_spec.py
