[metadata]
name = rpmreq
summary = python module for exploring RPM dependency tree
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Jakub Ruzicka
author-email = jruzicka@redhat.com
home-page = https://github.com/softwarefactory-project/rpmreq
keywords =

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    rpmreq

[entry_points]
console_scripts =
    rpmreq = rpmreq.cli:main

[aliases]
test = pytest

[pycodestyle]
exclude = build,lib,.tox,third,*.egg,docs,packages,.eggs
